--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^19.1.0",
     "react-monaco-editor": "^0.58.0",
     "react-router-dom": "^7.6.0"
